--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma plateforme de bénévolat</title>
-  </head>
-  <body>
-    <h1>Bienvenue sur ma plateforme!</h1>
-    <p>Ce site aide à connecter les jeunes bénévoles et les personnes âgées.</p>
-    <p>Site en construction </p>
-  </body>
+    <title>MainDansLaMain - Accueil</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenue sur MainDansLaMain</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="inscription.html">Inscription</a>
+            <a href="profil.html">Profil</a>
+            <a href="match.html">Trouver un match</a>
+        </nav>
+    </header>
+    <main>
+        <p>Cette plateforme met en relation des jeunes bénévoles avec des personnes âgées ayant besoin d’aide pour des tâches quotidiennes.</p>
+        <p>Rejoignez-nous pour aider votre communauté !</p>
+        <a class="button" href="inscription.html">S'inscrire</a>
+    </main>
+    <footer>
+        <p>&copy; 2025 MainDansLaMain</p>
+    </footer>
+</body>
 </html>
